[gd_scene load_steps=2 format=3 uid="uid://empty_shelves_test"]

[ext_resource type="Script" path="res://Tests/empty_shelves_test.gd" id="1_test"]

[node name="EmptyShelvesTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Empty Shelves Consumable Test"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Initializing..."
horizontal_alignment = 1

[node name="MultiplierLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplier registered: None"
horizontal_alignment = 1

[node name="ScoresLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scores assigned: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Apply Empty Shelves"

[node name="AssignScoreButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Assign Score (Simulate)"

[node name="CheckMultiplierButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Check Multiplier Status"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LogLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
bbcode_enabled = true
text = "[b]Test Log:[/b]"
scroll_following = true
